--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </form>
 
         <small>Proudly South African 🇿🇦 • Made with love in 2025</small>
-        <small>Felix AKA 6TeeN</small>
+        <small>By Felix AKA 6TeeN</small>
     </div>
 </body>
 </html>
